<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/caramel"
        android:padding="40dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/plum"
            android:contentDescription="@string/plum_is"
            android:background="@color/light_tan"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/blue"
            android:contentDescription="@string/blue_is"
            android:background="@color/light_tan"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

         <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_tan"
            android:textColor="@color/black"
            android:contentDescription="@string/gold_is"
            android:text="@string/gold"
            android:layout_marginTop="5dp" />

    </LinearLayout>
